Fix wrapping of multi-currency-cells in tree-tables

--- a/fava/static/sass/_tree-table.scss
+++ b/fava/static/sass/_tree-table.scss
@@ -67,11 +67,12 @@ ol.tree-table {
     }
 
     .balance-children {
+        display: block;
         color: lighten($color_text, 60);
     }
 
     li.toggled {
-        ol { display:none; }
+        ol { display: none; }
 
         .balance {
             display: none;
